--- a/courses_closed_details.html
+++ b/courses_closed_details.html
@@ -41,9 +41,9 @@
                 </div>
                 <menu class="col-lg-auto navbar">
                     <ul class="navbar-inner">
-                        <li class="navbar-item"><a href="courses_listing.html">Szkolenia otwarte</a></li>
-                        <li class="navbar-item"><a href="#">Szkolenia zamknięte</a></li>
-                        <li class="navbar-item"><a href="#">Publikacje</a></li>
+                        <li class="navbar-item"><a href="courses_open.html">Szkolenia otwarte</a></li>
+                        <li class="navbar-item"><a href="courses_closed.html">Szkolenia zamknięte</a></li>
+                        <li class="navbar-item"><a href="publications.html">Publikacje</a></li>
                         <li class="navbar-item"><a href="about_us.html">O nas</a></li>
                         <li class="navbar-item"><a href="contact.html">Kontakt</a></li>
                     </ul>
@@ -58,17 +58,16 @@
 		<div class="container">
 			<div class="row">
 	            <div class="col-sm-4 col-lg-4 contentbox-image-hld">
-	                <span class="label label-itembox">forum</span>
-	                <img src="https://via.placeholder.com/350x288/ddd/000.png" />
+	                <span class="label label-itembox">szkolenie zamknięte</span>
+	                <img src="https://via.placeholder.com/380x285/ddd/000.png" />
 	            </div>
 				<div class="col-sm-8 col-lg-8 contentbox-header">
 					<div class="contentbox-title-hld">
-						<h1 class="title">5. Forum Nowoczesnego Controllingu</h1>
-						<h2 class="subtitle">Skuteczny controlling - rentowne przedsiębiorstwo. Koszty - oszczędności - optymalizacje</h2>
+						<h1 class="title">Ocena okresowa pracowników</h1>
+						<h2 class="subtitle">Praktyczne narzędzie w zarządzaniu zasobami ludzkimi</h2>
 					</div>
 					<div class="event-details">
-						<p class="city"><i class="icon icon--calendar"></i> Warszawa, 24-25.10.2019</p>
-						<p class="location"><i class="icon icon--location"></i> Hotel LORD, Al. Krakowska 218 Warszawa - Okęcie</p>
+						<p class="location"><i class="icon icon--location"></i>Szkolenie dostępne w formule zamkniętej w siedzibie zleceniodawcy</p>
 					</div>
 				</div>
 			</div>
@@ -77,8 +76,7 @@
 	<div class="container contentbox-main-hld">
 		<div class="row">
 			<div class="col-lg-9 contentbox-action contentbox-action--top">
-				<p class="price">Cena: <span class="price-value">1590</span> <span class="price-currency">zł</span> <span class="price-tax">netto</span></p>
-				<a href="courses_register.html" class="btn btn-primary">Formularz zgłoszenia</a>
+				<a href="courses_register.html" class="btn btn-primary">Zapytanie ofertowe</a>
 				<ul class="list list--social">
 					<li class="list-item list-item--twitter"><a href="#"><i class="icon icon--twitter"></i></a></li>
 					<li class="list-item list-item--facebook"><a href="#"><i class="icon icon--facebook"></i></a></li>
@@ -127,19 +125,8 @@
 						</ul>
 					</li>
 				</ol>
-				<h3 class="header-title header-title--content"><span>Partnerzy</span></h3>
-                <ul class="list list--partners">
-                    <li class="list-item"><img src="http://via.placeholder.com/250x65/ffcffc/000000?text=1" /></li>
-                    <li class="list-item"><img src="http://via.placeholder.com/250x25/ffcccc/000000?text=2" /></li>
-                    <li class="list-item"><img src="http://via.placeholder.com/250x65/cccffc/000000?text=3" /></li>
-                    <li class="list-item"><img src="http://via.placeholder.com/250x65/ffccfc/000000?text=4" /></li>
-                    <li class="list-item"><img src="http://via.placeholder.com/250x55/ffcccc/000000?text=5" /></li>
-                    <li class="list-item"><img src="http://via.placeholder.com/250x65/cffffc/000000?text=6" /></li>
-                </ul>
 			</div>
 			<div class="col-lg-4">
-				<h3 class="header-title header-title--content"><span>Czas trwania</span></h3>
-				<p>10.00-17.00</p>
 				<h3 class="header-title header-title--content"><span>Osoby docelowe</span></h3>
 				<ul>
 					<li>controllerzy</li>
@@ -157,8 +144,7 @@
 				<p>Od 12 lat sprzedaje i szkoli handlowców. Uczył się technik sprzedaży od najlepszych, a dziś przekłada wiedzę na praktyczne warsztaty. Obala stare modele obsługi klientów i propaguje nowoczesny nurt sprzedażowy, oparty na poznaniu drugiej osoby poprzez obserwację, słuchanie i szczere zrozumienie. Współpracował m.in. z Ibis Hotel, Nordea Bank, Impel. Autor książek „Sprzedaż jest sexi” oraz „Martwa Sprzedaż”, cyklicznie pisuje do czasopism branżowych takich jak „Szef Sprzedaży”, „As Sprzedaży” i „Nowa Sprzedaż”.</p>
 			</div>
 			<div class="col-lg-12 contentbox-action contentbox-action--bottom">
-				<p class="price">Cena: <span class="price-value">1590</span> <span class="price-currency">zł</span> <span class="price-tax">netto</span></p>
-				<a href="courses_register.html" class="btn btn-primary">Formularz zgłoszenia</a>
+				<a href="courses_register.html" class="btn btn-primary">Zapytanie ofertowe</a>
 				<ul class="list list--social">
 					<li class="list-item list-item--twitter"><a href="#"><i class="icon icon--twitter"></i></a></li>
 					<li class="list-item list-item--facebook"><a href="#"><i class="icon icon--facebook"></i></a></li>
@@ -193,9 +179,9 @@
                         <li class="list-2-col-inner">
                             <ul class="nav-bull">
                                 <li class="nav-bull-item"><a href="index.html">Strona główna</a></li>
-                                <li class="nav-bull-item"><a href="courses_listing.html">Szkolenia otwarte</a></li>
-                                <li class="nav-bull-item"><a href="#">Szkolenia zamknięte</a></li>
-                                <li class="nav-bull-item"><a href="#">Publikacje</a></li>
+                                <li class="nav-bull-item"><a href="courses_open.html">Szkolenia otwarte</a></li>
+                                <li class="nav-bull-item"><a href="courses_closed.html">Szkolenia zamknięte</a></li>
+                                <li class="nav-bull-item"><a href="publications.html">Publikacje</a></li>
                             </ul>
                         </li>
                         <li class="list-2-col-inner">
