--- a/courses_open.html
+++ b/courses_open.html
@@ -42,9 +42,9 @@
                 </div>
                 <menu class="col-lg-auto navbar">
                     <ul class="navbar-inner">
-                        <li class="navbar-item"><a href="courses_listing.html">Szkolenia otwarte</a></li>
-                        <li class="navbar-item"><a href="#">Szkolenia zamknięte</a></li>
-                        <li class="navbar-item"><a href="#">Publikacje</a></li>
+                        <li class="navbar-item"><a href="courses_open.html">Szkolenia otwarte</a></li>
+                        <li class="navbar-item"><a href="courses_closed.html">Szkolenia zamknięte</a></li>
+                        <li class="navbar-item"><a href="publications.html">Publikacje</a></li>
                         <li class="navbar-item"><a href="about_us.html">O nas</a></li>
                         <li class="navbar-item"><a href="contact.html">Kontakt</a></li>
                     </ul>
@@ -57,20 +57,9 @@
 <main>
     <div class="container">
         <div class="header center">
-            <h3 class="header-title header-title--name"><span>Polecane szkolenia</span></h3>
+            <h3 class="header-title header-title--name"><span>Szkolenia otwarte</span></h3>
         </div>
     </div>
-
-	<section class="insetbox insetbox--admission">
-	    <div class="container">
-	        <div class="row">
-	            <div class="col">
-	                <p>Explanator proponuje <b>szkolenia zamknięte</b> – formy ściśle dopasowane do kultury organizacyjnej i potrzeb Państwa przedsiębiorstw. Aby stworzyć szkolenie idealnie dopasowane do profilu firmy współpracujemy ściśle ze zleceniodawcą – tak na etapie <b>definiowania potrzeb</b>, jak i <b>oceny efektywności szkolenia</b>. Poprzez nasze przywiązanie do <b>praktycznego charakteru szkoleń</b> „in company” wspomagamy realizację Państwa celów w zakresie <b>rozwoju zawodowego</b> kadr zarządzających i pracowników.</p>
-	                <a href="contact.html" class="btn btn-primary btn-primary pull-right">Pobierz katalog</a>
-	            </div>
-	        </div>
-	    </div>
-	</section>
 
     <div class="container">
         <div class="row">
@@ -93,7 +82,7 @@
                                 <i class="icon icon--calendar"></i>
                                 <a href="#" class="itembox-action-item">Cała Polska <small>(szkolenie on-line)</small> 30.08.2019-20.09.2019</a>
                             </p>
-                            <a href="courses_details.html" class="btn btn-border">Szczegóły</a>
+                            <a href="courses_open_details.html" class="btn btn-border">Szczegóły</a>
                         </div>
 
                     </div>
@@ -120,7 +109,84 @@
                                 <a href="#" class="itembox-action-item">Warszawa, 22-29.08.2019</a>
                                 <a href="#" class="itembox-action-item">Gdańsk, 4.09.2019</a>
                             </p>
-                            <a href="courses_details.html" class="btn btn-border">Szczegóły</a>
+                            <a href="courses_open_details.html" class="btn btn-border">Szczegóły</a>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-12 itembox">
+                <div class="col-lg-4 itembox-image-hld">
+                    <span class="label label-itembox">forum</span>
+                    <img src="https://via.placeholder.com/380x285/ddd/000.png" />
+                </div>
+                <div class="col-lg-8 itembox-data">
+                    <div class="itembox-header">
+                        <h3 class="itembox-header-title">5. Forum Nowoczesnego Controllingu</h3>
+                        <h3 class="itembox-header-subtitle">Skuteczny controlling - rentowne przedsiębiorstwo. Koszty - oszczędności - optymalizacje</h3>
+                    </div>
+                    <div class="itembox-body">
+                        <div class="col-lg-7 itembox-content">
+                            <p>Gdy pojawiają się pytania o rentowność i optymalizację, warto opierać decyzje na wartościowych źródłach wiedzy i przykładach dobrych praktyk. Bo jeśli optymalizować to tak, żeby być w stanie wypłynąć na spokojne wody nie tylko tu i teraz, ale również w dłuższej perspektywie. Dlatego też tegoroczne spotkanie controllerów, dyrektorów finansowych, księgowych oraz właścicieli firm skoncentruje się na temacie zwiększania skuteczności służb controllingowych.</p>
+                        </div>
+                        <div class="col-lg-5 itembox-action itembox-action--line">
+                            <p><b>Miejsce i termin:</b>
+                                <i class="icon icon--calendar"></i>
+                                <a href="#" class="itembox-action-item">Cała Polska <small>(szkolenie on-line)</small> 30.08.2019-20.09.2019</a>
+                            </p>
+                            <a href="courses_open_details.html" class="btn btn-border">Szczegóły</a>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-12 itembox">
+                <div class="col-lg-4 itembox-image-hld">
+                    <span class="label label-itembox">e-kurs mailowy</span>
+                    <img src="https://via.placeholder.com/380x285/ddd/000.png" />
+                </div>
+                <div class="col-lg-8 itembox-data">
+                    <div class="itembox-header">
+                        <h3 class="itembox-header-title">Umowa zlecenia - przegląd ryzyk formalno-prawnych</h3>
+                        <h3 class="itembox-header-subtitle">Zagadnienia praktyczne, przegląd orzecznictwa, odpowiedzi na najważniejsze pytania</h3>
+                    </div>
+                    <div class="itembox-body">
+                        <div class="col-lg-7 itembox-content">
+                            <p>Zinteresowanie pracodawców umowami cywilno-prawnymi nie słabnie. Jednakże z każdą formą elastycznego zatrudnienia związane są liczne ryzyka. Możliwości popełnienia błędu skutkującego znaczącymi konsekwencjami prawnymi i finansowymi jest wyjątkowo duże. Dodatkowo pojawia się liczne orzecznictwo, które ma konkretny wpływ na praktykę zatrudniania pracowników.</p>
+                        </div>
+                        <div class="col-lg-5 itembox-action itembox-action--line">
+                            <p><b>Miejsce i termin:</b>
+                                <i class="icon icon--calendar"></i>
+                                <a href="#" class="itembox-action-item">Poznań, 22.08.2019</a>
+                                <a href="#" class="itembox-action-item">Warszawa, 22-29.08.2019</a>
+                                <a href="#" class="itembox-action-item">Gdańsk, 4.09.2019</a>
+                            </p>
+                            <a href="courses_open_details.html" class="btn btn-border">Szczegóły</a>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-12 itembox">
+                <div class="col-lg-4 itembox-image-hld">
+                    <span class="label label-itembox">forum</span>
+                    <img src="https://via.placeholder.com/380x285/ddd/000.png" />
+                </div>
+                <div class="col-lg-8 itembox-data">
+                    <div class="itembox-header">
+                        <h3 class="itembox-header-title">5. Forum Nowoczesnego Controllingu</h3>
+                        <h3 class="itembox-header-subtitle">Skuteczny controlling - rentowne przedsiębiorstwo. Koszty - oszczędności - optymalizacje</h3>
+                    </div>
+                    <div class="itembox-body">
+                        <div class="col-lg-7 itembox-content">
+                            <p>Gdy pojawiają się pytania o rentowność i optymalizację, warto opierać decyzje na wartościowych źródłach wiedzy i przykładach dobrych praktyk. Bo jeśli optymalizować to tak, żeby być w stanie wypłynąć na spokojne wody nie tylko tu i teraz, ale również w dłuższej perspektywie. Dlatego też tegoroczne spotkanie controllerów, dyrektorów finansowych, księgowych oraz właścicieli firm skoncentruje się na temacie zwiększania skuteczności służb controllingowych.</p>
+                        </div>
+                        <div class="col-lg-5 itembox-action itembox-action--line">
+                            <p><b>Miejsce i termin:</b>
+                                <i class="icon icon--calendar"></i>
+                                <a href="#" class="itembox-action-item">Cała Polska <small>(szkolenie on-line)</small> 30.08.2019-20.09.2019</a>
+                            </p>
+                            <a href="courses_open_details.html" class="btn btn-border">Szczegóły</a>
                         </div>
 
                     </div>
@@ -134,10 +200,10 @@
 					<li><a href="#">3</a></li>
 					<li><a href="#">4</a></li>
 					<li class="blank"><span>...</span></li>
-					<li class="next"><a href="#">następna strona</a></li>
+					<li class="next"><a href="#">następna strona <i class="icon icon--arrow-right"></i></a></li>
 				</ul>
 				<div class="btn-group">
-					<a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#">pokaż 5 na stronie <i class="icon icon--arrow-bottom"></i></a>
+					<a class="btn btn-border dropdown-toggle" data-toggle="dropdown" href="#">pokaż 5 na stronie <i class="icon icon--arrow-down"></i></a>
 					<ul class="dropdown-menu">
 						<li class="dropdown-item"><a href="#">pokaż 5 na stronie</a></li>
 						<li class="dropdown-item"><a href="#">pokaż 10 na stronie</a></li>
@@ -172,9 +238,9 @@
                         <li class="list-2-col-inner">
                             <ul class="nav-bull">
                                 <li class="nav-bull-item"><a href="index.html">Strona główna</a></li>
-                                <li class="nav-bull-item"><a href="courses_listing.html">Szkolenia otwarte</a></li>
-                                <li class="nav-bull-item"><a href="#">Szkolenia zamknięte</a></li>
-                                <li class="nav-bull-item"><a href="#">Publikacje</a></li>
+                                <li class="nav-bull-item"><a href="courses_open.html">Szkolenia otwarte</a></li>
+                                <li class="nav-bull-item"><a href="courses_closed.html">Szkolenia zamknięte</a></li>
+                                <li class="nav-bull-item"><a href="publications.html">Publikacje</a></li>
                             </ul>
                         </li>
                         <li class="list-2-col-inner">
