--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
                 </div>
                 <menu class="col-lg-auto navbar">
                     <ul class="navbar-inner">
-                        <li class="navbar-item"><a href="courses_listing.html">Szkolenia otwarte</a></li>
-                        <li class="navbar-item"><a href="#">Szkolenia zamknięte</a></li>
-                        <li class="navbar-item"><a href="#">Publikacje</a></li>
+                        <li class="navbar-item"><a href="courses_open.html">Szkolenia otwarte</a></li>
+                        <li class="navbar-item"><a href="courses_closed.html">Szkolenia zamknięte</a></li>
+                        <li class="navbar-item"><a href="publications.html">Publikacje</a></li>
                         <li class="navbar-item"><a href="about_us.html">O nas</a></li>
                         <li class="navbar-item"><a href="contact.html">Kontakt</a></li>
                     </ul>
@@ -361,9 +361,9 @@
                         <li class="list-2-col-inner">
                             <ul class="nav-bull">
                                 <li class="nav-bull-item"><a href="index.html">Strona główna</a></li>
-                                <li class="nav-bull-item"><a href="courses_listing.html">Szkolenia otwarte</a></li>
-                                <li class="nav-bull-item"><a href="#">Szkolenia zamknięte</a></li>
-                                <li class="nav-bull-item"><a href="#">Publikacje</a></li>
+                                <li class="nav-bull-item"><a href="courses_open.html">Szkolenia otwarte</a></li>
+                                <li class="nav-bull-item"><a href="courses_closed.html">Szkolenia zamknięte</a></li>
+                                <li class="nav-bull-item"><a href="publications.html">Publikacje</a></li>
                             </ul>
                         </li>
                         <li class="list-2-col-inner">
